--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "features": {
       "ghcr.io/devcontainers-contrib/features/jshint:2": {}
     },
-    "postCreateCommand": "npm install",
+    "postCreateCommand": "cd src && npm install",
     "customizations": {
         "vscode": {
             "settings": {
